--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,74 +1,86 @@
-body {
-  color: white;
-  background-size: cover;
-  height:100%
+
+.col-4{
+  border: 2px solid yellow;
+  padding-left: 50px;
+  background-color: red;
+  margin-left: 240px;
+  background-color: lightgray;
+  margin-top: -30px;
+  margin-left: 10px;
+  border: 2px solid yellow; height: 90vh;
+  padding-top: 10px;
+  font-size: 20px;
+  color: yellow;
+}
+.jumbotron{
+  background-color: lightgray;
+  color: yellow;
+}
+.dashBoard{
+  text-align: center;
+  background-color: lightgray;
+}
+h2{
+  text-align: center;
 }
 
-.jumbotron {
-  background: rgba(0,0,0,0);
+#favmeal{
+  margin-top: 20px;
+  margin-bottom: 50px; 
+  padding-right: 20px;
+  margin-left: 10px;
 }
 
-.modal {
-  color: black;
+#favdrink{
+  margin-top: 20px;
+  margin-bottom: 50px; 
+  margin-left: 10px;
+  padding-right: 20px;
+}
+#history{
+  margin-top: 20px;
+  margin-bottom: 50px; 
+  margin-left: 10px;
+  padding-right: 20px;
 }
 
-.btn {
-  color:white;
-  background:#cadde1;
-  border: 1px solid white;
+#bycity{
+  margin-top: 20px;
+  margin-bottom: 50px; 
+  margin-left: 10px;
+  padding-right: 20px;
 }
 
-#user-form, .header-wrap, #create-form, .create-user-wrap {
-  padding: 20px;
-  border-radius: 15px;
-  margin: 20px 0;
+#nearby{
+  
+  margin-left: 25px;
+
+  
+
 }
 
-#update-err-msg,
-#login-err-msg,
-#create-err-msg {
-  color: red !important;
+#favsearch{
+  margin-left: 50px;
 }
 
-#go-home {
- width: auto;
- height: 65px;
+.col-6{
+  border: 2px solid yellow;
+  margin-left: 530px;
+  background-color: lightgray;
+  padding-right: 20px;
+  margin-top: -300px;
+  margin-bottom: 0px;
+ width: 100%;
+
 }
 
-.container {
-  padding-bottom: 2%;
-  margin-top: 10%;
-  background: rgba(86, 101, 115,.6);
-  height:100%;
-  border-radius: .25rem;
-  margin-bottom: 2%;
-  width: 600px;
-}
-
-[data-useremail="true"] {
-  color: white !important;
-}
-[data-register="true"] {
-  color: white !important;
-}
-
-.lead {
-  font-size: 1.8rem;
-  font-weight: 500;
-}
-
-.userId h2, .header-wrap h1 {
-  text-transform: capitalize;
-}
-
-hr {
-  background-color: #fff !important;
-}
-
-.list-group-item {
-  line-height: 2.5;
-}
-
-.card-body {
-  color: #444;
+box{
+  border: 2px solid yellow;
+  font-size: 20px;
+  margin-right: 50px;
+  margin-left: 70px;
+  background-color: yellow;
+  padding-bottom: 50px;
+  margin-top: 50px;
+  padding-right: 10px;
 }
