--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .jumbotron {
-  background: rgba(0,0,0,0);
+  background-image: url ("pexels-emiliano-arano-3608311.jpg");
 }
 
 .modal {
