changed all examples to restaurants

--- a/views/restaurant-detail.handlebars
+++ b/views/restaurant-detail.handlebars
@@ -5,15 +5,15 @@
     <div class="col-8 offset-2">
       <div class="card mt-4">
         <div class="card-body">
-          <h5 class="card-title">Example</h5>
+          <h5 class="card-title">Restaurant</h5>
           <p>
-            <strong>ID</strong>: {{example.id}}</p>
+            <strong>ID</strong>: {{restaurant.id}}</p>
           <p>
           <p>
-            <strong>Text</strong>: {{example.text}}</p>
+            <strong>Name</strong>: {{restaurant.name}}</p>
           <p>
-            <strong>Description:</strong> {{example.description}}</p>
-            <a href="/example">← Back To Home</a>
+            <strong>Description:</strong> {{restaurant.description}}</p>
+            <a href="/restaurant">← Back To Home</a>
         </div>
       </div>
     </div>
