--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -13,7 +13,7 @@
 
     {{#if isloggedin}}
       <li class="nav-item">
-        <a class="nav-link" href="/example">Example page</a>
+        <a class="nav-link" href="/restaurant">Restaurant page</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/profile">My Profile</a>
