--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -9,6 +9,7 @@
           <div class="form-group">
             <br>
             <br>
+            <h2>Add New Restaurant</h2>
             <label for="restaurant-name">Restaurant Name</label>
             <input type="text" id="restaurant-name" class="form-control" aria-describedby="restaurant-name" placeholder="Enter restaurant name">
           </div>
