--- a/views/restaurant-detail.handlebars
+++ b/views/restaurant-detail.handlebars
@@ -13,6 +13,11 @@
             <strong>Name</strong>: {{restaurant.name}}</p>
           <p>
             <strong>Description:</strong> {{restaurant.description}}</p>
+          <p>
+          <strong>Food:</strong> {{restaurant.food}}</p>
+          <p>
+          <strong>Drink:</strong> {{restaurant.drink}}</p>
+
             <a href="/restaurant">← Back To Home</a>
         </div>
       </div>
