--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,14 +2,16 @@
 
 <div id="main-container" class="container">
   <div class="jumbotron text-center header-wrap" align="center">
-    <p class="lead">Welcome to <strong>Sample App</strong></p>
+    <p class="lead">Welcome to <strong>Munchies</strong></p>
     <hr class="my-4">
     <div>
       {{#if isloggedin}}
         You are logged in as {{user.firstName}}
+        <br>
+        <br>
         <a href="/logout"> <button type="btn" class="btn">Logout</button></a>
       {{else}}
-        <p>You need to log in to use this app.</p>
+        <p>Please log in or Create a new account</p>
       {{/if}}
       <h5 id="login-err-msg"></h5>
     </div>
