--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,7 +5,7 @@
     <br>
     <br>
     <br>
-    <h3>View or update your user</h3>
+    <h3>View or update your account:</h3>
     <div class="userId">
       {{!-- <h3>Welcome, {{userInfo.firstName}}</h3> --}}
       {{!-- <h5 id="user-number" data-useremail="{{userInfo.email}}">Account email: {{userInfo.email}}</h5> --}}
@@ -16,22 +16,22 @@
   <form id="user-form">
     <div class="form-row">
       <div class="form-group col-md-6">
-        <label for="inputFirst">First Name</label>
+        <label for="inputFirst">First Name:</label>
         <input type="text" class="form-control" id="inputFirst" value="{{userInfo.firstName}}" placeholder="John">
       </div>
       <div class="form-group col-md-6">
-        <label for="inputLast">Last Name</label>
+        <label for="inputLast">Last Name:</label>
         <input type="text" class="form-control" id="inputLast" value="{{userInfo.lastName}}" placeholder="Doe">
       </div>
     </div>
 
     <div class="form-row">
       <div class="form-group col-md-6">
-        <label for="inputPassword">Email</label>
+        <label for="inputPassword">Email:</label>
         <input type="text" class="form-control" id="inputEmail" value="{{userInfo.email}}">
       </div>
       <div class="form-group col-md-6">
-        <label for="inputPassword">Password</label>
+        <label for="inputPassword">New Password:</label>
         <input type="password" class="form-control" id="inputPassword" value="{{userInfo.password}}">
       </div>
     </div>
