--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col col-md-12">
       <header class="create-user-wrap header-wrap" align="center">
-        <h1>Create Your Account</h1>
+        <h1>Create A New Account</h1>
         <h3 id="create-err-msg"></h3>
       </header>
 
@@ -13,28 +13,28 @@
       <form id= "create-form">
         <div class="form-row">
           <div class="form-group col-md-12">
-            <label for="inputFirst">First Name</label>
+            <label for="inputFirst">First Name:</label>
             <input type="text" class="form-control" id="inputFirst" placeholder="John">
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-12">
-            <label for="inputLast">Last Name</label>
+            <label for="inputLast">Last Name:</label>
             <input type="text" class="form-control" id="inputLast" placeholder="Doe">
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-12">
-            <label for="inputEmail">Email</label>
+            <label for="inputEmail">Email:</label>
             <input type="email" class="form-control" id="inputEmail" placeholder="Email">
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-12">
-            <label for="inputPassword">Password</label>
+            <label for="inputPassword">Password:</label>
             <input type="password" class="form-control" id="inputPassword" placeholder="Password">
           </div>
         </div>
