--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -9,12 +9,12 @@
           <div class="form-group">
             <br>
             <br>
-            <h2>Add New Restaurant</h2>
-            <label for="restaurant-name">Restaurant Name</label>
+            <h2>Add A New Restaurant</h2>
+            <label for="restaurant-name">Restaurant Name:</label>
             <input type="text" id="restaurant-name" class="form-control" aria-describedby="restaurant-name" placeholder="Enter restaurant name">
           </div>
           <div class="form-group">
-            <label for="restaurant-description">Restaurant Description</label>
+            <label for="restaurant-description">Restaurant Description:</label>
             <textarea class="form-control" id="restaurant-description" aria-describedby="restaurant-description" placeholder="Enter restaurant description"></textarea>
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
