--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
         You are logged in as {{user.firstName}}
         <a href="/logout"> <button type="btn" class="btn">Logout</button></a>
       {{else}}
-        <p style="color: blue;"">You need to log in to use this app.</p>
+        <p style="color: blue;">You need to log in to use this app.</p>
       {{/if}}
       <h5 id="login-err-msg"></h5>
     </div>
