--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -1,13 +1,6 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <!-- Brand/logo -->
-  <a class="navbar-brand" href="/">
-
-    
-  <a class="navbar-brand" style="text-align: center; color:lightblue; margin-left: 420px;" href="/">
-
-
-    Munchies
-  </a>
+  <a class="navbar-brand" href="/">Munchies</a>
   
   <!-- Links -->
   <ul class="nav navbar-nav ml-auto">
@@ -18,20 +11,20 @@
 
     {{#if isloggedin}}
       <li class="nav-item">
-        <a class="nav-link" href="/restaurant" style="color:lightblue">Restaurant page</a>
+        <a class="nav-link" href="/restaurant">Restaurant page</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/profile" style="color:lightblue">My Profile</a>
+        <a class="nav-link" href="/profile">My Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/logout" style="color:lightblue">Logout</a>
+        <a class="nav-link" href="/logout">Logout</a>
       </li>
     {{else}}
       <li class="nav-item">
-        <a class="nav-link" href="#" id="login-modal" style="color:lightblue">Login</a>
+        <a class="nav-link" href="#" id="login-modal">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/register" style="color:lightblue" data-register={{register}}>Register</a>
+        <a class="nav-link" href="/register" data-register={{register}}>Register</a>
       </li>
     {{/if}}
   </ul>
