--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <!-- Brand/logo -->
-  <a class="navbar-brand" href="/">Munchies</a>
+  <a class="navbar-brand" href="/" style="margin-left: 290px; font-size:40px">Munchies</a>
   
   <!-- Links -->
   <ul class="nav navbar-nav ml-auto">
