--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,7 +6,7 @@
     <p class="lead">Welcome to <strong>Munchies</strong></p>
 
     <hr class="my-4">
-    <div>
+    <div class="log">
       {{#if isloggedin}}
         You are logged in as {{user.firstName}}
         <br>
