--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,7 +7,6 @@ body {
 .form-group{
   margin-right: 50px;
 }
-
 .restaurantdetails {
   background-image: url("../img/restaurantdetailbackground.jpeg");
   background-size: cover;
@@ -16,29 +15,34 @@ body {
 .linkbtn {
   color:lightblue;
 }
-<<<<<<< HEAD
-  
-=======
-
->>>>>>> ddddb59c2e600ec1ad95c77a3612fbd4009804ae
 .navbar .nav-item .nav-link {
   color: lightblue;
 }
-
 .navbar .navbar-brand {
   text-align: center;
   color:lightblue;
   padding-left: 300px;
 }
-
-
 #home{
   background-image: url(../img/restaurantpage.png);
 }
-
 #belong{
   color: brown;
   font-weight: 800;
-font-size: 40px;
+  font-size: 40px;
 }
-
+.jumbotron{
+  background-image: url("../img/homeimg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.lead{
+  font-weight: bold;
+  color: lightblue;
+  font-size: 70px;
+}
+.log{
+  font-weight: bold;
+  font-size: 30px;
+  color: blue;
+}
