--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <!-- Brand/logo -->
-  <a class="navbar-brand" href="/" style="margin-left: 290px; font-size:40px">Munchies</a>
+  <a class="navbar-brand" href="/" style="font-size:40px">Munchies</a>
   
   <!-- Links -->
   <ul class="nav navbar-nav ml-auto">
@@ -21,7 +21,7 @@
       </li>
     {{else}}
       <li class="nav-item">
-        <a class="nav-link" href="#" id="login-modal">Login</a>
+        <a class="nav-link" href="#" id="login-modal" style="margin-left: -10px;">Login</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/register" data-register={{register}}>Register</a>
