--- a/views/restaurant-detail.handlebars
+++ b/views/restaurant-detail.handlebars
@@ -63,7 +63,7 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Seach your favorites here...">
                 </div>
-                    <button class="btn bg-dark" style="color:lightblue" id="searchbox" id="create-submit">Click to search!</button>
+                    <button class="btn bg-dark" style="color:lightblue" id="create-submit">Click to search!</button>
               </form>
             </div>
         </div>      
