background for main restaurant page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -27,6 +27,8 @@ body {
   background-image: url(../img/restaurantpage.png);
   background-size: cover;
   background-repeat: no-repeat;
+  padding-bottom: 130px;
+  margin-right: -2px;
 }
 #belong{
   color: brown;
