--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -27,6 +27,7 @@ body {
   background-image: url(../img/restaurantpage.png);
   background-size: cover;
   background-repeat: no-repeat;
+  padding-bottom: 170px;
 }
 #belong{
   color: brown;
