--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 {{> nav/nav-block user=true register=false}}
 <br>
-<div class="container">
+<div class="container" id="profile">
   <header align="center" class="header-wrap">
     <h3>View or update your account:</h3>
     <div class="userId">
