--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -21,7 +21,7 @@
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
         <div>
-          <h4 id="belong">Restaurants belonging to this user:</h4>
+          <h4 id="belong">Saved Restaurants:</h4>
           <ul id="restaurant-list" class="list-group">
             {{#each restaurants}}
             <li data-id="{{this.id}}" class="list-group-item">
