added in new image, added background image, deleted unneeded folder, and added class mainBody

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 {{> nav/nav-block}}
-
+<body class="mainBody">
 <div id="main-container" class="container">
   <div class="jumbotron text-center header-wrap" align="center">
 
@@ -21,5 +21,5 @@
     </div>
   </div>
 </div>
-
+</body>
 {{> modal/login-block}}
