--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -53,3 +53,8 @@ body {
   font-size: 30px;
   color: blue;
 }
+.mainBody{
+  background-image: url("../img/restauranthome.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
