--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -26,11 +26,13 @@ body {
 
 .navbar .nav-item .nav-link {
   color: lightblue;
+  font-size: 20px;
 }
 
 .navbar .navbar-brand {
   text-align: center;
   color:lightblue;
+  font-size: 40px;
 }
 
 #belong {
