--- a/views/restaurant-detail.handlebars
+++ b/views/restaurant-detail.handlebars
@@ -61,9 +61,9 @@
             <div class="card-body">          
               <form id="create-form" class="text-center p-3">
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Seach your favorites here...">
+                    <input id="search-input" type="text" class="form-control" placeholder="Seach your favorites here...">
                 </div>
-                    <button class="btn bg-dark" style="color:lightblue">Click to search!</button>
+                    <button id="search-submit" class="btn bg-dark" style="color:lightblue">Click to search!</button>
               </form>
             </div>
         </div>      
