--- a/views/partials/modal/login-block.handlebars
+++ b/views/partials/modal/login-block.handlebars
@@ -11,18 +11,18 @@
       <div class="modal-body">
         <form>
           <div class="form-group">
-            <label for="inputAccount">Email</label>
+            <label for="inputAccount">Email:</label>
             <input type="text" class="form-control" id="email">
           </div>
           <div class="form-group">
-            <label for="inputAccount">Password</label>
+            <label for="inputAccount">Password:</label>
             <input type="password" class="form-control" id="user_password">
           </div>
         </form>
       </div>
 
       <div class="modal-footer">
-        <button id="login" type="button" class="btn btn-primary">Login</button>
+        <button id="login" type="button" class="btn btn-primary">Login:</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
