--- a/views/restaurant-detail.handlebars
+++ b/views/restaurant-detail.handlebars
@@ -43,7 +43,7 @@
       <div class="col-md-4 col-xs-12">
         <div class="card border-dark mt-4">
           <div class="card-header bg-dark text-center ltBlue"><h4>Restaurant</h4></div>
-            <div class="card-body">          
+            <div class="card-body restaurantcard">          
                 <strong>Name</strong>: {{restaurant.name}}</p>
               <p>
                 <strong>Description:</strong> {{restaurant.description}}</p>
