--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -5,7 +5,7 @@
   <div class="container pt-5">
     <div class="row">
 
-      <div class="col-6">
+      <div class="col-md-6 col-xs-12">
         <div class="card border-dark mt-4">            
           <div class="card-header bg-dark text-center" style="color:lightblue"><h4>Add New Restaurant</h4></div>
         
@@ -28,7 +28,7 @@
         </div>
       </div>  
 
-      <div class="col-6">
+      <div class="col-md-6 col-xs-12">
         <div class="card border-dark mt-4">            
           <div class="card-header bg-dark text-center" style="color:lightblue"><h4>Saved Restaurants</h4></div>
             <div>
