updated button styling

--- a/views/partials/modal/login-block.handlebars
+++ b/views/partials/modal/login-block.handlebars
@@ -22,7 +22,7 @@
       </div>
 
       <div class="modal-footer">
-        <button id="login" type="button" class="btn btn-primary">Login:</button>
+        <button id="login" type="button" class="btn bg-dark ltBlue">Login</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
