--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -42,7 +42,7 @@
           <h2 id="message"></h2>
         </div>
 
-        <button type="submit" id="add-user" class="btn btn-primary">Submit</button>
+        <button type="submit" id="add-user" class="btn bg-dark btn-lg ltBlue">Submit</button>
       </form>
     
       </div>
