cleaning styling code

--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -7,7 +7,7 @@
 
       <div class="col-md-6 col-xs-12">
         <div class="card border-dark mt-4">            
-          <div class="card-header bg-dark text-center" style="color:lightblue"><h4>Add New Restaurant</h4></div>
+          <div class="card-header bg-dark text-center ltBlue"><h4>Add New Restaurant</h4></div>
         
           <div class="form-group pt-3 pl-3">
             <label style="font-size: 25px;" for="restaurant-name"><b>Name</b></label>
@@ -22,7 +22,7 @@
           </div>
 
           <div class="text-center pb-3">    
-          <button class="btn bg-dark btn-lg text-center" style="color:lightblue" id="submit">Save Restaurant</button>
+          <button class="btn bg-dark btn-lg text-center ltBlue" id="submit">Save Restaurant</button>
           </div>
 
         </div>
@@ -30,7 +30,7 @@
 
       <div class="col-md-6 col-xs-12">
         <div class="card border-dark mt-4">            
-          <div class="card-header bg-dark text-center" style="color:lightblue"><h4>Saved Restaurants</h4></div>
+          <div class="card-header bg-dark text-center ltBlue"><h4>Saved Restaurants</h4></div>
             <div>
                 <ul id="restaurant-list" class="list-group">
                   {{#each restaurants}}
