--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -74,43 +74,44 @@
   margin-right: -10px;
 }
 .profilecontainer{
- margin-left: 330px;
- margin-top: 10px;
- border: 3px solid purple;
- width: 50%;
- color: darkcyan;
- padding-bottom: 30px;
- background-color: white;
-text-align: center;
+  margin-left: 330px;
+  margin-top: 10px;
+  border: 3px solid purple;
+  width: 50%;
+  color: darkcyan;
+  padding-bottom: 30px;
+  background-color: white;
+  text-align: center;
 
 }
 
-.registercontainer{
+#register-container {
   background-image: url("../img/profile.png");
   background-size: cover;
   background-repeat: no-repeat;
-  padding-bottom: 230px;
+  /* padding-bottom: 230px;
   padding-top: 50px;
   margin-top: -25px;
-  margin-right: -10px;
-  padding-right: 750px;
+  margin-right: -10px; */
 }
 
-#register{
-  margin-left: 400px;
- margin-top: 30px;
- border: 3px solid purple;
- color: darkcyan;
- padding-bottom: 30px;
- background-color: white;
-text-align: center;
-padding-right: 150px;
-padding-left: 55px;
+#register-form {
+  border: 3px solid purple;
+  color: darkcyan;
+  padding-bottom: 30px;
+  background-color: white;
+  text-align: center;
+  padding-right: 100px;
+  padding-left: 100px;
+  max-width: 50%;
+  margin: auto;
 }
-.ltBlue{
+
+.ltBlue {
   color: lightblue;
 }
-.darkBlue{
+
+.darkBlue {
   color:rgb(9, 9, 240);
   font-weight: bold;
   font-size: 20px;
