--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,51 +1,53 @@
 {{> nav/nav-block user=false register=true}}
 
-<div class="registercontainer">
-  <div class="row">
-    <div class="col col-md-12" id="register">
-      <header class="create-user-wrap header-wrap" align="center">
-        <h1>Create A New Account</h1>
-        <h3 id="create-err-msg"></h3>
-      </header>
-   
-      <h3 id="err-msg"></h3>
-      <form id= "create-form">
-        <div class="form-row">
-          <div class="form-group col-md-12">
-            <label for="inputFirst">First Name:</label>
-            <input type="text" class="form-control" id="inputFirst" placeholder="John">
-          </div>
-        </div>
-
-        <div class="form-row">
-          <div class="form-group col-md-12">
-            <label for="inputLast">Last Name:</label>
-            <input type="text" class="form-control" id="inputLast" placeholder="Doe">
-          </div>
-        </div>
-
-        <div class="form-row">
-          <div class="form-group col-md-12">
-            <label for="inputEmail">Email:</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-          </div>
-        </div>
-
-        <div class="form-row">
-          <div class="form-group col-md-12">
-            <label for="inputPassword">Password:</label>
-            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-          </div>
-        </div>
-
-        <div>
-          <h2 id="message"></h2>
-        </div>
-
-        <button type="submit" id="add-user" class="btn btn-primary">Submit</button>
-      </form>
+<body id="register-container">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12" id="register-form">
+        <header class="create-user-wrap header-wrap" align="center">
+          <h1>Create A New Account</h1>
+          <h3 id="create-err-msg"></h3>
+        </header>
     
+        <h3 id="err-msg"></h3>
+        <form id= "create-form">
+          <div class="form-row">
+            <div class="form-group col-md-12">
+              <label for="inputFirst">First Name:</label>
+              <input type="text" class="form-control" id="inputFirst" placeholder="John">
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-12">
+              <label for="inputLast">Last Name:</label>
+              <input type="text" class="form-control" id="inputLast" placeholder="Doe">
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-12">
+              <label for="inputEmail">Email:</label>
+              <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-12">
+              <label for="inputPassword">Password:</label>
+              <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+            </div>
+          </div>
+
+          <div>
+            <h2 id="message"></h2>
+          </div>
+
+          <button type="submit" id="add-user" class="btn btn-primary">Submit</button>
+        </form>
+      
+        </div>
       </div>
     </div>
   </div>
-</div>
+</body>
