--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -43,16 +43,10 @@
             <h2 id="message"></h2>
           </div>
 
-<<<<<<< HEAD
-          <button type="submit" id="add-user" class="btn btn-primary">Submit</button>
+          <button type="submit" id="add-user" class="btn bg-dark ltBlue">Submit</button>
         </form>
       
         </div>
-=======
-        <button type="submit" id="add-user" class="btn bg-dark btn-lg ltBlue">Submit</button>
-      </form>
-    
->>>>>>> 03e3426028b2b2e4b27e34ca5c90f62bf4d31192
       </div>
     </div>
   </div>
