--- a/views/restaurant.handlebars
+++ b/views/restaurant.handlebars
@@ -10,13 +10,13 @@
           <div class="card-header bg-dark text-center ltBlue"><h4>Add New Restaurant</h4></div>
         
           <div class="form-group pt-3 pl-3">
-            <label style="font-size: 25px;" for="restaurant-name"><b>Name</b></label>
+            <label style="font-size: 25px" for="restaurant-name"><b>Name</b></label>
             <input type="text" id="restaurant-name" class="form-control" aria-describedby="restaurant-name"
               placeholder="Enter Restaurant Name...">
           </div>
 
           <div class="form-group pl-3">
-            <label style="font-size: 25px;" for="restaurant-description"><b>Description</b></label>
+            <label style="font-size: 25px" for="restaurant-description"><b>Description</b></label>
             <textarea class="form-control" id="restaurant-description" aria-describedby="restaurant-description"
               placeholder="Enter Restaurant Description..."></textarea>
           </div>
@@ -34,7 +34,7 @@
             <div>
                 <ul id="restaurant-list" class="list-group">
                   {{#each restaurants}}
-                  <li data-id="{{this.id}}" class="list-group-item" style="font-size: 22px;">
+                  <li data-id="{{this.id}}" class="list-group-item" style="font-size: 28px">
                     <a href="restaurant/{{this.id}}">{{this.name}}</a>
                     <button class="btn btn-danger float-right delete">ｘ</button>
                   </li>
